# bitbucket-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: package.json  pnpm-lock.yaml
packaging/windows/: main.wxs
src/api/: client.rs  downloads.rs  mod.rs  pipelines.rs
src/auth/: api_key.rs  oauth.rs
src/cli/: auth.rs  pipeline.rs  pr.rs  repo.rs
src/models/: repo.rs
src/tui/: event.rs
