[package]
name = "bitbucket-cli"
version = "0.3.19"
edition = "2024"
rust-version = "1.85"
description = "A powerful command-line interface for Bitbucket Cloud - manage repos, PRs, issues, and pipelines from your terminal with OAuth 2.0"
authors = ["Pegasus Heavy Industries"]
license = "MIT"
repository = "https://github.com/pegasusheavy/bitbucket-cli"
homepage = "https://github.com/pegasusheavy/bitbucket-cli"
documentation = "https://pegasusheavy.github.io/bitbucket-cli/"
readme = "README.md"
keywords = ["bitbucket", "cli", "git", "devtools", "tui"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/",
    ".github/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "bitbucket"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
oauth2 = "5"

# Configuration
toml = "0.8"
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Output formatting
colored = "3"
tabled = "0.17"
indicatif = "0.17"

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
dialoguer = "0.11"
rpassword = "7"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust", "vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[lib]
name = "bitbucket_cli"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

# Debian package configuration
[package.metadata.deb]
maintainer = "Pegasus Heavy Industries"
copyright = "2025, Pegasus Heavy Industries <contact@pegasusheavy.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A powerful command-line interface for Bitbucket Cloud. \
Manage repositories, pull requests, issues, and pipelines \
directly from your terminal with both CLI and TUI modes."""
depends = "$auto, libdbus-1-3"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bitbucket", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bitbucket-cli/", "644"],
    ["LICENSE", "usr/share/doc/bitbucket-cli/", "644"],
]

# RPM package configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/bitbucket", dest = "/usr/bin/bitbucket", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/bitbucket-cli/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/bitbucket-cli/LICENSE", mode = "644" },
]
[package.metadata.generate-rpm.requires]
dbus-libs = "*"
